# test_parser

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: nginx-app.conf  nginx.conf  supervisor-app.conf
project/: .babelrc  .eslintignore  .eslintrc.json  .prettierignore  .prettierrc.json  db.sqlite3  package-lock.json  package.json  style.sh  uwsgi.ini  webpack.config.js
project/api/: serializers.py  urls.py  views.py  views_task.py
project/assets/: .gitignore
project/assets/css/: main.css
project/assets/js/: main.js
project/assets/modules/: global_constant.js  main.widget.js
project/main/: forms.py  urls.py  views.py
project/main/templates/: main.page.html  main_base.html
project/project/: celery.py  models.py  settings.py  tasks.py  urls.py
project/project/management/commands/: load_currency.py
project/project/migrations/: 0001_initial.py
